--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,12 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-image: url("./assets/background.jpg");
+  background-position: center;
+  background-repeat:no-repeat;
+  background-attachment: fixed;
+  background-size:cover;
+  position:relative;
 }
 
 h1 {
